--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -6,8 +6,11 @@
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
 monitor = ,preferred,auto,1
-monitor = eDP-1,1920x1080@60,0x0,1.25
+monitor = eDP-1,1920x1080@60,0x0,1
 
+# Add workspaces
+workspace = 1, monitor:eDP-1
+workspace = 2, monitor:eDP-1
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
@@ -17,7 +20,7 @@ exec-once = ~/.scripts/xdg-desktop-portal.sh
 exec-once = /usr/lib/polkit-kde-authentication-agent-1
 exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = waybar &
-exec = wbg ~/.wallpapers/1.png
+exec = wbg ~/.wallpapers/P5_City.jpg
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
@@ -53,7 +56,7 @@ general {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
     gaps_in = 5
-    gaps_out = 20
+    gaps_out = 10
     border_size = 2
     col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
     col.inactive_border = rgba(595959aa)
@@ -65,11 +68,6 @@ decoration {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
     rounding = 10
-    blur = yes
-    blur_size = 3
-    blur_passes = 1
-    blur_new_optimizations = on
-
     drop_shadow = yes
     shadow_range = 4
     shadow_render_power = 3
@@ -104,7 +102,8 @@ master {
 
 gestures {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
-    workspace_swipe = off
+    workspace_swipe = yes
+    workspace_swipe_fingers = 3
 }
 
 # Example per-device config
@@ -118,8 +117,22 @@ device:epic-mouse-v1 {
 # Example windowrule v2
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
+# Set some GUIs floating (such as file selector, dialogs...)
+windowrule = float, file_progress
+windowrule = float, confirm
+windowrule = float, dialog
+windowrule = float, download
+windowrule = float, notification
+windowrule = float, error
+windowrule = float, splash
+windowrule = float, confirmreset
+windowrule = float, title:Open File
+windowrule = float, title:branchdialog
+windowrule = float, pavucontrol
+windowrule = float, file-roller
+# Set Opacity
 windowrulev2 = opacity 0.7 0.7,class:^(kitty)$
-windowrulev2 = opacity 0.8 0.8,class:^(nemo)$
+windowrulev2 = opacity 0.8 0.8,class:^(thunar)$
 windowrulev2 = opacity 0.9 0.9,class:^(firefox)$
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
@@ -129,7 +142,7 @@ $mainMod = SUPER
 bind = $mainMod, Q, exec, kitty
 bind = $mainMod, C, killactive, 
 bind = $mainMod, M, exit, 
-bind = $mainMod, E, exec, nemo
+bind = $mainMod, E, exec, thunar
 bind = $mainMod, V, togglefloating, 
 bind = $mainMod, SPACE, exec, wofi --show drun
 bind = $mainMod, P, pseudo, # dwindle
@@ -164,6 +177,9 @@ bind = $mainMod SHIFT, 7, movetoworkspace, 7
 bind = $mainMod SHIFT, 8, movetoworkspace, 8
 bind = $mainMod SHIFT, 9, movetoworkspace, 9
 bind = $mainMod SHIFT, 0, movetoworkspace, 10
+
+# Workspace switch
+bind = $mainMod, TAB, workspace, previous
 
 # Scroll through existing workspaces with mainMod + scroll
 bind = $mainMod, mouse_down, workspace, e+1
