--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -6,7 +6,7 @@
     "passthrough": false,
     "gtk-layer-shell": true,
     "height": 44,
-    "modules-left": ["clock", "custom/weather"],
+    "modules-left": ["clock", "custom/weather", "wlr/workspaces"],
     "modules-center": ["hyprland/window"],
     "modules-right": ["network", "battery", "cpu", "memory", "backlight", "pulseaudio", "tray"],
     "hyprland/window": {
@@ -14,11 +14,21 @@
     },
 
    "custom/weather" : {
-        "tooltip" : true,
-        "format" : "{}",
-        "interval" : 30,
-        "exec" : "go run ~/.scripts/weather-wttr.go --city Pau --lang fr --unit C",
-        "return-type" : "json"
+        "tooltip": true,
+        "format": "{}",
+        "interval": 30,
+        "exec": "go run ~/.scripts/weather-wttr.go --city Pau --lang fr --unit C",
+        "return-type": "json"
+    },
+
+    "wlr/workspaces": {
+	"active-only": false,
+	"all-outputs": true,
+	"on-scroll-up": "hyprctl dispatch workspace e+1",
+	"on-scroll-down": "hyprctl dispatch workspace e-1",
+        "format": "{icon}",
+        "all-outputs": true,
+        "on-click": "activate"
     },
     
     "tray": {
