fix: fixed hyprland and waybar config

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -20,7 +20,7 @@ exec-once = ~/.scripts/xdg-desktop-portal.sh
 exec-once = /usr/lib/polkit-kde-authentication-agent-1
 exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = waybar &
-exec = wbg ~/.wallpapers/P5_City.jpg
+exec = wbg ~/.wallpapers/1.png
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
@@ -108,9 +108,9 @@ gestures {
 
 # Example per-device config
 # See https://wiki.hyprland.org/Configuring/Keywords/#executing for more
-device:epic-mouse-v1 {
-    sensitivity = -0.5
-}
+#device:epic-mouse-v1 {
+#    sensitivity = -0.5
+#}
 
 # Example windowrule v1
 # windowrule = float, ^(kitty)$
