--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -20,7 +20,7 @@ exec-once = ~/.scripts/xdg-desktop-portal.sh
 exec-once = /usr/lib/polkit-kde-authentication-agent-1
 exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = waybar &
-exec = wbg ~/.wallpapers/1.png
+exec = wbg ~/.wallpapers/taehoon-kang-16.jpg
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
@@ -95,10 +95,10 @@ dwindle {
     preserve_split = yes # you probably want this
 }
 
-master {
+#master {
     # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
-    new_is_master = true
-}
+ #   new_is_master = true
+#}
 
 gestures {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
